--- a/hojas-de-estilos/index.css
+++ b/hojas-de-estilos/index.css
@@ -7,12 +7,30 @@ h3,h4{
     margin: 10px 0 10px 0;
 }
 
+header{
+    width: 100%;
+    height: 50px;
+    background-color: aquamarine;
+}
+
+footer{
+    height: 250px;
+    background-color: gray;
+}
+
 .borde-r5{
     border-radius: 5px;
 }
 
 .texto-centrado{
     text-align: center;
+}
+
+.contenedor-flex{
+    height: 100%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
 
 .contenedor-grid{
