--- a/hojas-de-estilos/index.css
+++ b/hojas-de-estilos/index.css
@@ -3,8 +3,10 @@
     padding: 0;
 }
 
-h3,h4{
-    margin: 10px 0 10px 0;
+h3,h4,h5,h6{
+    margin: 15px 0 15px 0;
+    font-family: sans-serif;
+    font-size: 20px;
 }
 
 header{
@@ -45,14 +47,6 @@ footer div{
     align-items: center;
 }
 
-.contenedor-secundario{
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-
 .contenedor-grid{
     width: 100%;
     display: grid;
@@ -70,6 +64,33 @@ footer div{
 .carta-info{
     height: 180px;
     padding: 10px;
+}
+
+.contenedor-secundario{
+    width: 100%;
+    height: 900px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    margin: 60px 0 60px 0;
+}
+
+.contenedor-secundario h3{
+    font-family: "Karma", sans-serif;
+    font-weight: 400;
+    font-size: 2rem;
+}
+
+h6 i{
+    font-weight: 400;
+    font-size: 16px;
+}
+
+.texto-secundario{
+    letter-spacing: 1px;
+    font-size: 15px;
+    line-height: 1.5;
 }
 
 
